--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ CLOUDFLARE_DATABASE_ID=your_database_id_here
 DISCORD_TOKEN=your_discord_token_here
 DISCORD_CLIENT_ID=your_client_id_here
 DISCORD_GUILD_ID=your_guild_id_here
+DISCORD_APPLICATION_ID=your_application_id_here
+DISCORD_PUBLIC_KEY=your_public_key_here
